--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,5 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -7,7 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainScreen">
-
+    <com.chainsaw.organic.widgets.SeekBarHint
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="50dip"
+        android:paddingLeft="50dip"
+        android:paddingRight="50dip"
+        android:paddingBottom="16dip"
+        android:id="@+id/seekBar"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal" />
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,4 +26,4 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+</LinearLayout>
