--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,6 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,16 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainScreen">
-    <com.chainsaw.organic.widgets.SeekBarHint
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="50dip"
-        android:paddingLeft="50dip"
-        android:paddingRight="50dip"
-        android:paddingBottom="16dip"
-        android:id="@+id/seekBar"
-        android:visibility="gone"
-        android:layout_gravity="center_horizontal" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,4 +16,33 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="16dip"
+        android:paddingLeft="32dip"
+        android:paddingRight="32dip"
+        android:paddingBottom="16dip"
+        android:background="@color/semi_transparent"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <com.chainsaw.organic.widgets.SeekBarHint
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:visibility="visible"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="16dip"
+            android:id="@+id/seekText" />
+    </LinearLayout>
+
+</RelativeLayout>
