--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="elv_popup_bg_color">#EE666666</color>
     <color name="elv_separator_color">#BBBBBB</color>
     <color name="elv_popup_text_color">#FFFFFF</color>
+
+    <color name="semi_transparent">#33000000</color>
 </resources>
