--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -17,6 +17,7 @@
         android:layout_centerHorizontal="true" />
 
     <LinearLayout
+        android:id="@+id/seekBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -37,7 +38,7 @@
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
