--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:hint="http://schemas.android.com/apk/res-auto"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,14 +36,17 @@
             android:layout_height="wrap_content"
             android:id="@+id/seekBar"
             android:visibility="visible"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            hint:popupStyle="follow"/>
+
 
         <TextView
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingBottom="16dip"
+            android:text="viluasdfuvbiad"
+            android:paddingTop="16dip"
             android:id="@+id/seekText" />
     </LinearLayout>
 
