--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,8 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:hint="http://schemas.android.com/apk/res-auto"
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
-    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -33,21 +31,10 @@
         android:layout_alignParentStart="true">
 
         <com.gc.materialdesign.views.Slider
-            android:id="@+id/slider"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#1E88E5"
-            materialdesign:max="50"
-            materialdesign:min="0"
-            materialdesign:showNumberIndicator="true"/>
-
-        <com.chainsaw.organic.widgets.SeekBarHint
+            android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
-            android:visibility="visible"
-            android:layout_gravity="center_horizontal"
-            hint:popupStyle="follow"/>
+            materialdesign:showNumberIndicator="true" />
 
 
         <TextView
@@ -59,5 +46,39 @@
             android:paddingTop="16dip"
             android:id="@+id/seekText" />
     </LinearLayout>
+
+    <com.gc.materialdesign.views.ButtonFloat
+        android:id="@+id/buttonFloat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="#1E88E5"
+        materialdesign:animate="true" />
+
+    <com.gc.materialdesign.views.ButtonFloat
+        android:id="@+id/bt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/buttonFloat"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="#1E88E5"
+        materialdesign:iconFloat = "@drawable/color_cycle_drawable"
+        materialdesign:animate="true" />
+
+    <com.gc.materialdesign.views.ButtonFloat
+        android:id="@+id/bt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bt1"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:layout_alignParentRight="true"
+        android:background="#1E88E5"
+        materialdesign:animate="true" />
 
 </RelativeLayout>
