Adding floating sliders. Great success

--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -57,27 +57,41 @@
         android:background="#1E88E5"
         materialdesign:animate="true" />
 
-    <com.gc.materialdesign.views.ButtonFloat
+    <com.chainsaw.organic.widgets.MySlider
+        android:id="@+id/bt0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="#1E88E5"
+        materialdesign:showNumberIndicator="true" />
+
+
+    <com.chainsaw.organic.widgets.MySlider
         android:id="@+id/bt1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/buttonFloat"
         android:layout_alignParentRight="true"
         android:layout_marginRight="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginBottom="24dp"
         android:background="#1E88E5"
-        materialdesign:iconFloat = "@drawable/color_cycle_drawable"
-        materialdesign:animate="true" />
+        materialdesign:showNumberIndicator="true" />
 
-    <com.gc.materialdesign.views.ButtonFloat
+    <com.chainsaw.organic.widgets.MySlider
         android:id="@+id/bt2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/bt1"
+        android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
         android:layout_alignParentRight="true"
         android:background="#1E88E5"
-        materialdesign:animate="true" />
+        materialdesign:showNumberIndicator="true" />
 
 </RelativeLayout>
