--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -57,11 +57,10 @@
         android:background="#1E88E5"
         materialdesign:animate="true" />
 
-    <com.chainsaw.organic.widgets.MySlider
+    <com.chainsaw.organic.widgets.HueSlider
         android:id="@+id/bt0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="24dp"
         android:layout_marginLeft="24dp"
@@ -70,7 +69,7 @@
         materialdesign:showNumberIndicator="true" />
 
 
-    <com.chainsaw.organic.widgets.MySlider
+    <com.chainsaw.organic.widgets.ValueSlider
         android:id="@+id/bt1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -82,7 +81,7 @@
         android:background="#1E88E5"
         materialdesign:showNumberIndicator="true" />
 
-    <com.chainsaw.organic.widgets.MySlider
+    <com.chainsaw.organic.widgets.ValueSlider
         android:id="@+id/bt2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
