did some cleaning up

--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,72 +1,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    xmlns:ripple="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainScreen">
-
-    <ImageView
+    <com.andexert.library.RippleView
+        android:id="@+id/more"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="0dp"
+        ripple:rv_centered="false">
+    <ImageView
         android:id="@+id/imgViewDisplay"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <LinearLayout
-        android:id="@+id/seekBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="16dip"
-        android:paddingLeft="32dip"
-        android:paddingRight="32dip"
-        android:paddingBottom="16dip"
-        android:background="@color/semi_transparent"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <com.gc.materialdesign.views.Slider
-            android:id="@+id/seekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            materialdesign:showNumberIndicator="true" />
-
-
-        <TextView
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingTop="16dip"
-            android:id="@+id/seekText" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
+    </com.andexert.library.RippleView>
 
     <com.gc.materialdesign.views.ButtonFloat
         android:id="@+id/buttonFloat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="24dp"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="24dp"
+        android:layout_marginRight="24dp"
         android:background="#1E88E5"
-        materialdesign:animate="true" />
+        materialdesign:animate="true"
+        materialdesign:iconFloat="@drawable/ic_action_settings"/>
 
     <com.chainsaw.organic.widgets.HueSlider
         android:id="@+id/bt0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginBottom="24dp"
-        android:background="#1E88E5"
-        materialdesign:showNumberIndicator="true" />
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:background="#1E88E5" />
 
 
     <com.chainsaw.organic.widgets.ValueSlider
@@ -75,22 +52,20 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/buttonFloat"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginBottom="24dp"
-        android:background="#1E88E5"
-        materialdesign:showNumberIndicator="true" />
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:background="#1E88E5" />
 
     <com.chainsaw.organic.widgets.ValueSlider
         android:id="@+id/bt2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/bt1"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginBottom="24dp"
-        android:layout_alignParentRight="true"
-        android:background="#1E88E5"
-        materialdesign:showNumberIndicator="true" />
+        android:background="#1E88E5" />
 
 </RelativeLayout>
